byobu (5.81) unreleased; urgency=medium

  * UNRELEASED

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 28 Apr 2014 09:36:59 -0700

byobu (5.80-0ubuntu1) utopic; urgency=medium

  * usr/lib/byobu/include/mondrian:
    - simplify and cleanup the mondrian squares easter egg, and idempotent
  * usr/bin/byobu-reconnect-sockets.in:
    - let's make sure that we name our temp directory

 -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 28 Apr 2014 09:36:53 -0700

byobu (5.79-0ubuntu1) unstable; urgency=medium

  [ Dustin Kirkland ]
  * usr/bin/byobu-ctrl-a.in: LP: #1313209
    - fix syntax error, remove unnecessary bindkey line
    - also fixes LP: #814172
  * usr/share/byobu/profiles/tmuxrc:
    - tmux windows still aren't working right; disable for now

  [ Kosuke Asami ]
  * usr/lib/byobu/include/config.py.in: LP: #1303218

 -- Dustin Kirkland <kirkland@ubuntu.com>  Sun, 27 Apr 2014 09:22:25 -0500

byobu (5.78-0ubuntu1) unstable; urgency=medium

  * usr/share/byobu/profiles/dircolors:
    - give executables just a little more pop
    - use a light grey underline for symlinks
    - add whitespace before inline comment
  * usr/share/byobu/profiles/bashrc:
    - Enable Ubuntu-themed dircolors on Ubuntu systems
  * usr/bin/byobu-janitor.in: LP: #1311919
    - ensure that windows.tmux exists;  fixes warning with F5
  * usr/bin/byobu-ctrl-a.in: LP: #1311177, #1274720
    - revert r2317 as this is breaking ctrl-a in byobu-screen in a bad way

 -- Dustin Kirkland <kirkland@ubuntu.com>  Wed, 23 Apr 2014 18:24:21 -0500

byobu (5.77-0ubuntu1) trusty; urgency=medium

  * usr/share/byobu/profiles/dircolors,
    usr/share/byobu/profiles/Makefile.am,
    usr/share/byobu/profiles/tmuxrc:
    - add a dircolors file
  * usr/share/byobu/profiles/bashrc, usr/share/byobu/profiles/dircolors:
    - LP: #1299964
    - swap orange and aubergine on the command prompt
    - aubergine is now the directory, orange is the hostname
    - still working on dircolors, use an aubergine (like our prompt)