@@ -8,9 +8,7 @@ byobu-enable, byobu-disable \- wrapper script for enabling/disabling automatic s
 \fBbyobu-disable\fP
 
 .SH DESCRIPTION
-\fBbyobu-enable\fP will do two things:
- 1) run \fBbyobu-launcher-install\fP(1) to configure \fBbyobu\fP(1) to launch automatically on login
- 2) then launch \fBbyobu\fP(1)
+\fBbyobu-enable\fP will run \fBbyobu-launcher-install\fP(1) to configure \fBbyobu\fP(1) to launch automatically on login
 
 \fBbyobu-disable\fP will simply run \fBbyobu-launcher-uninstall\fP(1).
 
