@@ -1,6 +1,8 @@
 byobu (5.81) unreleased; urgency=medium
 
-  * UNRELEASED
+  * usr/bin/byobu-enable.in, usr/share/man/man1/byobu-enable.1:
+    - no need to launch byobu in byobu-enable (no idea why I did it
+      that way originally)
 
  -- Dustin Kirkland <kirkland@ubuntu.com>  Mon, 28 Apr 2014 09:36:59 -0700
 
